// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page component renders sidebar and content 1`] = `
<div
  className="page"
>
  <div
    className="content_scroller"
  >
    <div
      className="content_width_limiter"
    >
      <div
        className="sidebar_container"
      >
        foo
      </div>
      <section
        className="content_container"
      >
        bar
      </section>
    </div>
  </div>
</div>
`;

exports[`Page component renders with detailPage CSS 1`] = `
<div
  className="page"
>
  <div
    className="content_scroller"
  >
    <div
      className="content_width_limiter"
    >
      <div
        className="sidebar_container is_detail_page"
      >
        foo
      </div>
      <section
        className="content_container is_detail_page"
      >
        bar
      </section>
    </div>
  </div>
</div>
`;
